@@ -1,5 +1,9 @@
 2019-05-20  Jonathan Wakely  <jwakely@redhat.com>
 
+	* testsuite/17_intro/names.cc: Do not check 'ptr' on Solaris.
+	* testsuite/experimental/names.cc: Include <experimental/filesystem>
+	conditionally.
+
 	PR c++/90532 Ensure __is_constructible(T[]) is false
 	* include/std/type_traits (__do_is_default_constructible_impl)
 	(__is_default_constructible_atom, __is_default_constructible_safe):
